--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-4">
-                <div class="well lead-well">
+                <div class="well lead-well int-cards">
                     <h3>Decision Support</h3>
                     <div class="int-sub">What treatment is best for me?</div>
                     <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <div class="well lead-well">
+                <div class="well lead-well int-cards">
                     <h3>Self Management</h3>
                     <div class="int-sub">How do I cope with my symptoms?</div>
                     <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated with prostate cancer.  Learn strategies to address those symptoms, specifically for men like you.</p>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <div class="well lead-well">
+                <div class="well lead-well int-cards">
                     <h3>Care Plan</h3>
                     <div class="int-sub">How to I help with my symptoms?</div>
                     <p>You’ve been treated for prostate cancer, so what’s next? Develop a customized survivorship plan, to help remind you of your health needs as you move back to the care of your regular doctor.</p>
@@ -52,7 +52,7 @@
 
 
             <div class="col-sm-6 col-md-4">
-                <div class="well lead-well">
+                <div class="well lead-well int-cards">
                     <h3>Community of Wellness</h3>
                     <div class="int-sub">How can I be healthy?</div>
                     <p>Health covers a broad range of topics, including exercise, diet, friends and social environments. Learn how to improve your overall health as you progress through your treatment.</p>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <div class="well lead-well">
+                <div class="well lead-well int-cards">
                     <h3>Sexual Recovery</h3>
                     <div class="int-sub">What about sex?</div>
                     <p>Treatment can impact sexual function. Assess your particular needs and see specific strategies for both you and your partner to develop a new normal in your sex life.</p>
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
-                <div class="well lead-well">
+                <div class="well lead-well int-cards">
                     <h3>Social Support Network</h3>
                     <div class="int-sub">Who can I talk with?</div>
                     <p>Find out how to connect with others who've experienced what you're going through. Building a strong support network leads to better outcomes.</p>
