TrueNTH portal - enlarge text on login page.

--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -29,11 +29,11 @@
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
                 <div class="well lead-well">
-                    <p><strong>TrueNTH</strong></p>
+                    <h3>TrueNTH</h3>
                     <ul>
-                        <li style="margin-bottom: 0.25em">is a revolutionary new program, funded by the Movember Foundation, that will significantly improve the physical and mental health of men diagnosed and living with prostate cancer.</li>
-                        <li style="margin-bottom: 0.25em">helps men and their families get their lives back on track following diagnosis and treatment.</li>
-                        <li>helps you feel knowledgeable and confident on your journey.</li>
+                        <li style="margin-bottom: 0.25em; font-size: 15px">is a revolutionary new program, funded by the Movember Foundation, that will significantly <strong>improve the physical and mental health of men</strong> diagnosed and living with prostate cancer.</li>
+                        <li style="margin-bottom: 0.25em; font-size: 15px">helps men and their families <strong>get their lives back on track</strong> following diagnosis and treatment.</li>
+                        <li style="font-size: 15px">helps you <strong>feel knowledgeable and confident</strong> on your journey.</li>
                     </ul>
 
                     <h4 class="sign-in">Sign in with:</h4>
