TrueNTH portal - minor text revision.

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -28,7 +28,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="well lead-well int-cards">
                     <h3>Decision Support</h3>
-                    <div class="int-sub">What treatment is best for me?</div>
+                    <div class="int-sub">What option is best for me?</div>
                     <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
                     <a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Decision Support <i class="fa fa-chevron-right"></i></a>
                 </div>
@@ -44,7 +44,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="well lead-well int-cards">
                     <h3>Care Plan</h3>
-                    <div class="int-sub">How to I help with my symptoms?</div>
+                    <div class="int-sub">How do I move forward after treatment?</div>
                     <p>You’ve been treated for prostate cancer, so what’s next? Develop a customized survivorship plan, to help remind you of your health needs as you move back to the care of your regular doctor.</p>
                     <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Care Plan  <i class="fa fa-chevron-right"></i></button></p>
                 </div>
