--- a/portal/templates/termsofuse.html
+++ b/portal/templates/termsofuse.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Terms of Use</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block body %}
   <p>
   This [AD-HOC DRAFT 6/5/2015] Privacy Policy applies solely to the True NTH USA website and not to third party websites reached through a link in the True NTH USA website.
 
@@ -23,5 +18,4 @@
   </p><p>
   Information we collect is stored on servers managed by the University of Washington. We use standard security procedures and practices to protect information from unauthorized access, use, or disclosure. However, no data sent over the Internet can be guaranteed to be 100% secure.
   </p>
-</body>
-</html>
+{% endblock %}
