--- a/portal/templates/register_client.html
+++ b/portal/templates/register_client.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>OAuth Client Registration</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block body %}
   <form action="/client" method="post">
     <p>Client Authorization URIs (separate multiple with space)</p>
     <input type="text" name="redirect_uri" size='79'
       value="http://host:port/authorized">
     <input type="submit" name="submit" value="register">
   </form>
-</body>
-</html>
+{% endblock %}
