--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -1,12 +1,11 @@
 <div class="tnth-nav-wrapper">
 
     <div class="container hidden-xs tnth-nav-main">
-        <div class="pull-left">
-            <!-- Probably need to use absolute links for images -->
+        <div id="tnthLogo">
             <a href="{{PORTAL}}"><img src="{{PORTAL}}{{ url_for('static', filename='img/logo_truenth_alt.png') }}" /></a>
         </div>
 
-        <div class="pull-right nav-links">
+        <div id="tnthTopLinks">
             {% if username %}
             <div class="btn-group nav-userinfo">
                 <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -15,22 +14,14 @@
                     <span class="fa fa-caret-down"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="{{PORTAL}}/profile">My Profile</a></li>
-                    <li><a href="{{PORTAL}}/logout">Log Out</a></li>
+                    <li><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
+                    <li><a href="{{PORTAL}}/logout">Log Out of TrueNTH</a></li>
                 </ul>
             </div>
             {% endif %}
-            <a class="btn tnth-white dropdown-toggle" href="{{PORTAL}}" title="Return to TrueNTH Home">
+            <a class="btn tnth-white" href="{{PORTAL}}" title="Return to TrueNTH Home">
                 <i class="fa fa-home fa-2x"></i>
             </a>
-            <form class="navbar-form tnth-search" role="search">
-                <div class="form-group">
-                    <div class="hide-initial" id="tnth-search-box">
-                        <input type="text" class="form-control" placeholder="Search TrueNTH">
-                    </div>
-                </div>
-                <button type="submit" class="btn tnth-white tnth-show-search"><i class="fa fa-search fa-lg"></i></button>
-            </form>
             <div class="btn-group nav-userinfo">
                 <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     <i class="fa fa-question fa-2x"></i>
@@ -46,53 +37,26 @@
     <nav class="navbar navbar-static-top visible-xs tnth-nav-xs">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="tnth-white navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle menu</span>
-                    <i class="fa fa-bars fa-lg"></i> &nbsp; Menu
+                <button type="button" class="tnth-white navbar-toggle collapsed" data-toggle="collapse" data-target="#tnthNavbarXs" aria-expanded="false" aria-controls="tnthNavbarXs">
+                    <img src="{{movember_profile}}" />
+                    <span class="fa fa-caret-down"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="{{PORTAL}}{{url_for('static',filename='img/logo_truenth_alt.png')}}" /></a>
+                <a class="navbar-brand" href="{{PORTAL}}" title="Return to TrueNTH home"><img src="{{PORTAL}}{{url_for('static',filename='img/logo_truenth_alt.png')}}" /></a>
             </div>
-            <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+            <div id="tnthNavbarXs" class="navbar-collapse collapse" aria-expanded="false">
                 <ul class="nav navbar-nav">
                     <li><a href="{{PORTAL}}">Home</a></li>
                     {% if username %}
-                    <li><a href="{{PORTAL}}/profile">My Profile</a></li>
+                    <li><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
                     {% endif %}
                     <li><a href="http://truenth.org" target="_blank">About</a></li>
                     <li class="disabled"><a href="#">Help</a></li>
                     {% if username %}
-                    <li><a href="{{PORTAL}}/logout">Log Out</a></li>
+                    <li><a href="{{PORTAL}}/logout">Log Out of TrueNTH</a></li>
                     {% endif %}
                 </ul>
-                <form class="navbar-form" role="search">
-                    <div class="form-group">
-                        <div>
-                            <input type="text" class="form-control" placeholder="Search TrueNTH">
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-default">Search</button>
-                </form>
             </div>
         </div>
     </nav>
 
 </div>
-
-<script>
-// Initiate trigger functionality on search box
-function showTnthSearch() {
-    $("body").on("click",".tnth-show-search",function(){
-        if ($(this).hasClass("now-open")) {
-            $(this).removeClass("now-open");
-            $("#tnth-search-box").hide();
-        } else {
-            $(this).addClass("now-open");
-            $("#tnth-search-box").fadeIn("slow");
-        }
-        return false;
-    });
-}
-$(document).ready(function(){
-    showTnthSearch();
-});
-</script>
