--- a/portal/templates/register_client.html
+++ b/portal/templates/register_client.html
@@ -25,7 +25,8 @@ separated by white space.
                             </ul>
                             <form action="/client" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="redirect_uri" size='79' value="https://hostname">
+                                    <label for="redirect_url">Application URL</label>
+                                    <input type="text" class="form-control" name="redirect_uri" id="redirect_uri" size='79' value="https://hostname">
                                 </div>
                                 <button type="submit" class="btn btn-tnth-primary">Register App</button>
                             </form>
