--- a/portal/templates/clients_list.html
+++ b/portal/templates/clients_list.html
@@ -16,6 +16,7 @@
                         <div class="col-xs-12 col-sm-6">
                             <h4>Central Services OAuth 2.0 Client Applications </h4>
                             <ul>
+                                <li style="margin-bottom: 0.25em; font-size: 18px"><a href="{{ url_for('.client') }}">Create A New TrueNTH Client Application</a> </li>
                                 {% for client in clients %}
                                 <a href="{{ url_for('.client_edit', client_id=client.client_id) }}">
                                     <li style="margin-bottom: 0.25em; font-size: 15px">App ID {{ client.client_id }} Site URL {{ client._redirect_uris }} </li>
