--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -16,6 +16,10 @@
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
                     <li><a href="{{PORTAL}}/logout">Log Out of TrueNTH</a></li>
+                    {% if user and user.has_roles('application_developer') %}
+
+                    <li><a href="{{PORTAL}}/clients">Client Applications</a></li>
+                    {% endif %}
                 </ul>
             {% elif login_url %}
                 <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
