--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -6,7 +6,7 @@
         </div>
 
         <div id="tnthTopLinks">
-            <div class="btn-group nav-userinfo">
+            <div class="btn-group nav-userinfo" id="userInfo" data-user-id="{{ movember_email }}">
             {% if username %}
                 <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     Welcome, {{ username }}
