Including user ID as data-attribute in portal_wrapper for Liferay.

--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -6,7 +6,7 @@
         </div>
 
         <div id="tnthTopLinks">
-            <div class="btn-group nav-userinfo" id="userInfo" data-user-id="{{ movember_email }}">
+            <div class="btn-group nav-userinfo" id="userInfo" data-user-email="{{ movember_email }}" data-user-id="{{ movember_id }}">
             {% if username %}
                 <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     Welcome, {{ username }}
