Adding Google authentication.
NB - requires schema and configuration changes!

--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -23,16 +23,16 @@
 
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="login" class="btn btn-block btn-social btn-facebook">
+                            <a href="login/facebook" class="btn btn-block btn-social btn-facebook">
                                 <i class="fa fa-facebook"></i>
                                 Facebook
                             </a><br />
                         </div>
                         <div class="col-sm-4">
-                            <button data-placement="top" data-toggle="popover" title="Not Yet Available" data-content="This login method not available in demo." class="btn btn-block btn-social btn-google demo-disabled">
+                            <a href="login/google" class="btn btn-block btn-social btn-google">
                                 <i class="fa fa-google"></i>
                                 Google
-                            </button><br />
+                            </a><br />
                         </div>
                         <div class="col-sm-4">
                             <button data-placement="top" data-toggle="popover" title="Not Yet Available" data-content="This login method not available in demo." class="btn btn-block btn-social btn-movember demo-disabled">
