--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -11,7 +11,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="well lead-well int-cards">
                     <h3>Decision Support</h3>
-                    <div class="int-sub">What option is best for me?</div>
+                    <div class="int-sub">Which option is best for me?</div>
                     <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
                     <a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Decision Support <i class="fa fa-chevron-right"></i></a>
                 </div>
